--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "fastapi>=0.115.12",
-    "openai>=1.69.0",
-    "python-dotenv>=1.1.0",
-    "qdrant-client>=1.13.3",
-    "uvicorn>=0.34.0",
-]
+dependencies = []
+
+[tool.uv.workspace]
+members = ["backend"]
