--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,22 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
 
+[dependency-groups]
+dev = [
+    "basedpyright>=1.23.1",
+    "poethepoet>=0.32.0",
+    "pytest>=8.3.4",
+    "ruff>=0.8.5",
+]
+
 [tool.uv.workspace]
 members = ["backend"]
+
+[tool.poe.tasks]
+fmt = "ruff format ${PWD}"
+lint = "ruff check --fix ${PWD}"
+check = "basedpyright ${PWD}"
+test = "pytest ${PWD}"
+all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]
+ci-fmt = "ruff format --check ${PWD}"
+ci-lint = "ruff check ${PWD}"
