Enhance backend API: add population endpoint, improve embedding retrieval, and update Docker configuration hotloading

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,22 @@ services:
       dockerfile: backend/Dockerfile
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend:/workspace/backend
     environment:
       - PYTHONUNBUFFERED=1
     env_file:
       - .env
+    volumes:
+      - ./backend:/workspace/backend
+    depends_on:
+      - qdrant
+    command: ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+  qdrant:
+    image: qdrant/qdrant
+    ports:
+      - "6333:6333"
+    volumes:
+      - qdrant_storage:/qdrant/storage
+
+volumes:
+  qdrant_storage:
