--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile
+    container_name: rag-backend
     ports:
       - "8000:8000"
     environment:
@@ -10,17 +11,29 @@ services:
     env_file:
       - .env
     volumes:
-      - ./backend:/workspace/backend
+      - ./backend/src/backend:/workspace/backend/src/backend
+      - ./backend/tests:/workspace/backend/tests
     depends_on:
       - qdrant
-    command: ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--reload-dir", "/workspace/backend/src"]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   qdrant:
+    container_name: rag-qdrant
     image: qdrant/qdrant
     ports:
       - "6333:6333"
     volumes:
       - qdrant_storage:/qdrant/storage
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   qdrant_storage:
