--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,6 @@ fmt = "ruff format ${PWD}"
 lint = "ruff check --fix ${PWD}"
 check = "basedpyright ${PWD}"
 test = "pytest ${PWD}"
-all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]
+all = ["fmt", "lint", "check"]
 ci-fmt = "ruff format --check ${PWD}"
 ci-lint = "ruff check ${PWD}"
